<resources>
    <string name="app_name" translatable="false">AnnotateX</string>
    <string name="pdf_viewer_fragment">PDF Viewer Fragment</string>
    <string name="menu_icon_desc">Menu options</string>
    <string name="cover_preview">Cover Preview</string>
    <string name="book_cover_desc">Book cover image</string>
    <string name="default_notification_channel_id">notifications</string>
    <string name = "terms_notice">By placing this order, you agree to the Terms of Service and Privacy Policy. Subscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current period.</string>
    <string name="start_30_day_free_trial">Start 30-day free trial</string>
    <string name="collaborator_profile_picture_desc">Collaborator Profile Picture</string>
    <string name="language_updated_success">Language updated successfully</string>
    <string name="language_update_failed">Failed to update language</string>
    <string name="select_language">Select Language</string>
    <string name="language">Language</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="manage_subscription">Manage Subscription</string>

    <!-- Profile Fragment -->
    <string name="profile_image_desc">Profile Image</string>
    <string name="edit_profile_image_desc">Edit Profile Image</string>
    <string name="default_name">Your Name</string>
    <string name="default_username">\@username_example</string>
    <string name="settings">Settings</string>
    <string name="payment">Payment</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logout">Log Out</string>

    <!-- Language Names -->
    <string name="lang_english">English</string>
    <string name="lang_spanish">Español</string>
    <string name="lang_french">Français</string>
    <string name="lang_german">Deutsch</string>
    <string name="lang_chinese">中文</string>
    <string name="lang_japanese">日本語</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="save">Save</string>
    <string name="help_center">Help Center</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="friends">Friends</string>
    <string name="search_in_friends">Search in Friends...</string>
    <string name="notifications">Notifications</string>
    <string name="add_member">Add Member</string>
    <string name="leave_group">Leave Group</string>
    <string name="members">Members</string>
    <string name="add_your_pdf_files_here_n_max_file_size_1mb">Add your PDF files here\n\t\t Max file size: 1MB</string>
    <string name="read_book">Read Book</string>
    <string name="lang_bulgarian">български</string>
    <string name="default_web_client_id">YOUR_WEB_CLIENT_ID</string>

</resources>